# zemtik-govern

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODOS.md  conftest.py  pyproject.toml  skills-lock.json  zemtik.example.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  architecture.md  configuration-reference.md  integration-guide.md  observability.md  operations.md  sandbox.md
docs/adr/: 001-agt-pins.md  002-langfuse-pin.md
docs/integrations/: langchain.md
examples/: govern.yaml  langchain_minimal.py  langgraph_toolnode.py
policies/: prompt-injection.yaml
sandbox/: auditor.py  dogfood_cutover.py  e2e_govern.yaml  e2e_openai_governed.py  langfuse_boundary_smoke.py  langfuse_langchain_smoke.py  langfuse_slice2_smoke.py  qa_demo.py
spike/: injection-detector-findings.md  verify_agt_signatures.py
src/zemtik_govern/: __init__.py  _agt.py  _cache.py  audit.py  config.py  context.py  core.py  errors.py  identity.py  injection.py  output.py  policy.py  protocols.py  registry.py
src/zemtik_govern/audit/: __init__.py  fallback.py  log.py  reader.py
src/zemtik_govern/cli/: __main__.py  init_langchain.py
src/zemtik_govern/identity/: __init__.py  protocols.py  static_identity.py
src/zemtik_govern/langchain/: __init__.py  observability.py  tool_node.py  tools.py
src/zemtik_govern/mcp/: __init__.py  server.py
src/zemtik_govern/observability/: __init__.py  _langfuse.py  masking.py  protocols.py  tracer.py
tests/: test_adversarial.py  test_adversarial_e9.py  test_agt_boundary.py  test_agt_conformance.py  test_agt_mcp_conformance.py  test_audit.py  test_audit_reader.py  test_bounded_idempotency.py  test_bounded_ttl_dict.py  test_budget_deadline_race.py  test_config.py  test_context.py  test_core.py  test_decision_budget_wiring.py  test_devex_ergonomics.py  test_dogfood_cutover.py  test_e2e.py  test_errors.py  test_examples.py  test_fingerprint_strict.py  test_identity.py  test_injection_guard.py  test_mcp.py  test_modes.py  test_output_seam.py  test_policy.py  test_pressure.py  test_protocols.py  test_proxy.py  test_readme_quickstart.py  test_registry.py  test_scaffolding.py
tests/e2e/: test_sandbox_journeys.py
tests/langchain/: test_cli.py  test_govern_tool.py  test_governed_tool_node.py  test_langfuse_callback.py  test_langsmith_trace.py
tests/observability/: _fakes.py  test_core_tracing.py  test_core_tracing_failopen.py  test_langfuse_boundary.py  test_langfuse_tracer.py  test_tracer_noop.py  test_tracer_wiring.py
